PIC-2024: Restructure defendants and offences (#729)
* 🚚 PIC-2024: Rename DefendantEntity and DefendantOffenceEntity

* 🚚 PIC-2024: Rename HEARING_DEFENDANT and OFFENCE tables

* 🚧 PIC-2024: Rename lots of things and fix some tests

* 🚧 PIC-2024: Partial implementation of HearingRepositoryFacade

* ✨ PIC-2024: Map crn on defendant

* 🐛 PIC-2024: Fix duplication of hearingDefendants

* 🐛 PIC-2024: Fixes to migrations and pact test

* 💚 PIC-2024: Patch vulnerability and remove redundant TODOs

* 🔥 PIC-2024: Remove redundant repositories

* 🔥 PIC-2024: Remove phoneNumber field as part of migration

* ♻️⚡️️ PIC-2024: Add integration tests for HearingRepositoryFacade and refactor queries

- Used id in place of created timestamp where possible to prevent collisions
- Created new findByCourtCodeAndHearingDay method omitting parameters for performance

* ✅ PIC-2024: Fix test data to allow sorting by primary key as proxy for created

* ✅ PIC-2024: Improve test coverage and minor test refactors

* ✅ PIC-2024: Fix issue with DefendantEntity CRN not persisting

* ✅ PIC-2024: Refactor SQL queries to use max id in place of max created timestamp

* 🗃 PIC-2024: Add constraints to defendant table and tidy indexes