@@ -15,6 +15,7 @@ import uk.gov.justice.probation.courtcaseservice.jpa.entity.CourtCaseEntity;
 import uk.gov.justice.probation.courtcaseservice.jpa.entity.CourtSession;
 import uk.gov.justice.probation.courtcaseservice.jpa.entity.DefendantEntity;
 import uk.gov.justice.probation.courtcaseservice.jpa.entity.EntityHelper;
+import uk.gov.justice.probation.courtcaseservice.jpa.entity.HearingDefendantEntity;
 import uk.gov.justice.probation.courtcaseservice.jpa.entity.HearingEntity;
 import uk.gov.justice.probation.courtcaseservice.jpa.entity.NamePropertiesEntity;
 import uk.gov.justice.probation.courtcaseservice.service.CourtCaseService;
@@ -41,8 +42,6 @@ import static org.mockito.Mockito.when;
 import static uk.gov.justice.probation.courtcaseservice.jpa.entity.EntityHelper.CASE_ID;
 import static uk.gov.justice.probation.courtcaseservice.jpa.entity.EntityHelper.CRN;
 import static uk.gov.justice.probation.courtcaseservice.jpa.entity.EntityHelper.DEFENDANT_ID;
-import static uk.gov.justice.probation.courtcaseservice.jpa.entity.EntityHelper.aDefendantEntity;
-import static uk.gov.justice.probation.courtcaseservice.jpa.entity.EntityHelper.aHearingEntity;
 import static uk.gov.justice.probation.courtcaseservice.jpa.entity.SourceType.COMMON_PLATFORM;
 
 @ExtendWith(MockitoExtension.class)
@@ -68,15 +67,17 @@ class CourtCaseControllerTest {
     private final HearingEntity hearingEntity = HearingEntity.builder()
             .hearingId(HEARING_ID)
             .courtCase(CourtCaseEntity.builder()
-                .caseNo(CASE_NO)
-                .caseId(CASE_ID)
-                .sourceType(COMMON_PLATFORM)
-            .build())
-            .hearingDays(Collections.singletonList(EntityHelper.aHearingEntity()
+                    .caseNo(CASE_NO)
+                    .caseId(CASE_ID)
+                    .sourceType(COMMON_PLATFORM)
+                    .build())
+            .hearingDays(Collections.singletonList(EntityHelper.aHearingDayEntity()
                     .withCourtCode(COURT_CODE)))
-            .defendants(Collections.singletonList(
-                    DefendantEntity.builder()
-                            .defendantId(DEFENDANT_ID)
+            .hearingDefendants(Collections.singletonList(
+                    HearingDefendantEntity.builder()
+                            .defendant(DefendantEntity.builder()
+                                    .defendantId(DEFENDANT_ID)
+                                    .build())
                             .build()
             ))
 
@@ -103,7 +104,7 @@ class CourtCaseControllerTest {
 
     @Test
     void givenNoDefendants_whenGetCourtCase_thenShouldThrowExceptionWithCaseId() {
-        when(courtCaseService.getHearingByCaseNumber(COURT_CODE, CASE_NO)).thenReturn(hearingEntity.withDefendants(Collections.emptyList()));
+        when(courtCaseService.getHearingByCaseNumber(COURT_CODE, CASE_NO)).thenReturn(hearingEntity.withHearingDefendants(Collections.emptyList()));
 
         assertThatExceptionOfType(IllegalStateException.class)
                 .isThrownBy(() -> courtCaseController.getCourtCase(COURT_CODE, CASE_NO))
@@ -128,7 +129,7 @@ class CourtCaseControllerTest {
     void getCourtCaseByCaseIdAndDefendantId_shouldReturnCourtCaseResponseNoCaseNo() {
 
         when(offenderMatchService.getMatchCountByCaseIdAndDefendant(CASE_ID, DEFENDANT_ID)).thenReturn(Optional.of(2));
-        when(courtCaseService.getHearingByCaseIdAndDefendantId(CASE_ID, DEFENDANT_ID)).thenReturn(hearingEntity);
+        when(courtCaseService.getHearingByHearingIdAndDefendantId(CASE_ID, DEFENDANT_ID)).thenReturn(hearingEntity);
 
         var courtCase = courtCaseController.getCourtCaseByCaseIdAndDefendantId(CASE_ID, DEFENDANT_ID);
         assertThat(courtCase.getCourtCode()).isEqualTo(COURT_CODE);
@@ -137,7 +138,7 @@ class CourtCaseControllerTest {
         assertThat(courtCase.getNumberOfPossibleMatches()).isEqualTo(2);
         assertThat(courtCase.getSession()).isSameAs(session);
 
-        verify(courtCaseService).getHearingByCaseIdAndDefendantId(CASE_ID, DEFENDANT_ID);
+        verify(courtCaseService).getHearingByHearingIdAndDefendantId(CASE_ID, DEFENDANT_ID);
         verify(offenderMatchService).getMatchCountByCaseIdAndDefendant(CASE_ID, DEFENDANT_ID);
         verifyNoMoreInteractions(courtCaseService, offenderMatchService);
     }
@@ -148,10 +149,10 @@ class CourtCaseControllerTest {
         var lastModified = Optional.of(LocalDateTime.of(LocalDate.of(2015, Month.OCTOBER, 21), LocalTime.of(7, 28)));
         when(courtCaseService.filterHearingsLastModified(COURT_CODE, DATE)).thenReturn(lastModified);
 
-        final var courtCaseEntity = this.hearingEntity.withDefendants(List.of(aDefendantEntity()))
-                .withHearingDays(Collections.singletonList(EntityHelper.aHearingEntity()
+        final var courtCaseEntity = this.hearingEntity.withHearingDefendants(List.of(EntityHelper.aHearingDefendantEntity()))
+                .withHearingDays(Collections.singletonList(EntityHelper.aHearingDayEntity()
                         .withDay(DATE)
-                        .withTime(LocalTime.of(9,0))
+                        .withTime(LocalTime.of(9, 0))
                         .withCourtCode(COURT_CODE)
                 ));
         when(courtCaseService.filterHearings(COURT_CODE, DATE, CREATED_AFTER, CREATED_BEFORE))
@@ -166,18 +167,18 @@ class CourtCaseControllerTest {
     @Test
     void givenSingleCaseWithMultipleDefendants_whenGetCaseList_shouldReturnMultipleCourtCaseResponse() {
 
-        var defendantEntity1 = EntityHelper.aDefendantEntity();
-        var defendantEntity2 = EntityHelper.aDefendantEntity(NamePropertiesEntity.builder().title("HRH").forename1("Catherine").forename2("The").surname("GREAT").build());
+        var defendantEntity1 = EntityHelper.aHearingDefendantEntity();
+        var defendantEntity2 = EntityHelper.aHearingDefendantEntity(NamePropertiesEntity.builder().title("HRH").forename1("Catherine").forename2("The").surname("GREAT").build());
         var courtCaseEntity = HearingEntity.builder()
                 .courtCase(CourtCaseEntity.builder()
-                    .caseNo(CASE_NO)
-                    .sourceType(COMMON_PLATFORM)
-                .build())
-                .defendants(List.of(defendantEntity1, defendantEntity2))
-                .hearingDays(Collections.singletonList(EntityHelper.aHearingEntity()
+                        .caseNo(CASE_NO)
+                        .sourceType(COMMON_PLATFORM)
+                        .build())
+                .hearingDefendants(List.of(defendantEntity1, defendantEntity2))
+                .hearingDays(Collections.singletonList(EntityHelper.aHearingDayEntity()
                         .withCourtCode(COURT_CODE)
                         .withDay(DATE)
-                        .withTime(LocalTime.of(9,0))))
+                        .withTime(LocalTime.of(9, 0))))
                 .build();
 
         var lastModified = Optional.of(LocalDateTime.of(LocalDate.of(2015, Month.OCTOBER, 21), LocalTime.of(7, 28)));
@@ -336,9 +337,10 @@ class CourtCaseControllerTest {
     }
 
     private HearingEntity buildCourtCaseEntity(NamePropertiesEntity name, LocalDateTime sessionStartTime, String courtRoom) {
+        final var hearingDefendantEntity = EntityHelper.aHearingDefendant(name);
         return EntityHelper.aHearingEntity(UUID.randomUUID().toString())
-                .withDefendants(List.of(aDefendantEntity(UUID.randomUUID().toString()).withName(name)))
-                .withHearingDays(List.of(aHearingEntity(sessionStartTime).withCourtRoom(courtRoom)));
+                .withHearingDefendants(List.of(hearingDefendantEntity))
+                .withHearingDays(List.of(EntityHelper.aHearingDayEntity(sessionStartTime).withCourtRoom(courtRoom)));
 
     }
 }
